test/cases/pass/helpers.ky
#test(skip)
fn mul(int a, int b) -> int { return a * b; }
