test/cases/fail/05_decorator_signature.ky
#test(fail)
fn bad_sig(int x) -> int {
    return x;
}

@main(main) {
    print(0);
}
